<resources>
    <string name="app_name">Adagio Agenda Digital</string>
    <string name="email">Email</string>c
    <string name="nome_de_usuario">Nome de usuário</string>
    <string name="entrar">Entrar</string>
    <string name="text_to_cadastro">Crie uma conta clicando aqui</string>
    <string name="password">Senha</string>
    <string name="register_activity_title">CADASTRE-SE</string>
    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="activity_home_manage_your_time_message">GERENCIE SEU TEMPO</string>
    <string name="year">Ano:</string>
    <string name="month">Mês:</string>
    <string name="mode_calendar">Modo do calendário:</string>
    <string name="choose">Escolher</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="choose_the_month">Escolha o mês</string>

    <string name="january">Janeiro</string>
    <string name="february">Fevereiro</string>
    <string name="march">Março</string>
    <string name="april">Abril</string>
    <string name="may">Maio</string>
    <string name="june">Junho</string>
    <string name="july">Julho</string>
    <string name="august">Agosto</string>
    <string name="september">Setembro</string>
    <string name="october">Outubro</string>
    <string name="november">Novembro</string>
    <string name="december">Dezembro</string>
    <string name="activity_home_mode_slide_text">Slide</string>
    <string name="activity_home_mode_mosaic_text">Mosaico</string>
    <string name="home">Home</string>
    <string name="create_task">Criar tarefa</string>
    <string name="tasks">Tarefas</string>
    <string name="logout">Sair</string>
    <string name="open">Abrir</string>
    <string name="close">Fechar</string>
    <string name="button_to_sidebar">Atalho para abrir sidebar</string>
    <string name="container_sidebar">Sidebar container</string>
    <string name="notifications">Notificações</string>
    <string name="estatisticas">Estatísticas</string>
    <string name="tags_button">Tags</string>
    <string name="adagio">Adagio</string>
    <string-array name="months">
        <item name="jan">@string/january</item>
        <item name="feb">@string/february</item>
        <item name="march">@string/march</item>
        <item name="apr">@string/april</item>
        <item name="month_may">@string/may</item>
        <item name="month_june">@string/june</item>
        <item name="month_july">@string/july</item>
        <item name="month_august">@string/august</item>
        <item name="month_september">@string/september</item>
        <item name="month_october">@string/october</item>
        <item name="month_november">@string/november</item>
        <item name="month_december">@string/december</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tags">Tags</string>
    <string name="relatories">Relatórios</string>
    <string name="manage_your_tasks">Gerencie suas tarefas</string>
    <string name="view_your_notifications">Notificações</string>
    <string name="manage_your_tags">Gerencie suas tags</string>
    <string name="view_your_relatories">Relatórios de tarefas</string>
    <string name="fragment_task_order_by_date">Ordenar por</string>
    <string name="fragment_task_limit_moment">Limite</string>
    <string name="fragment_task_initial_moment">Início</string>
    <string name="fragment_task_order_by_priority">Prioridade</string>
    <string name="fragment_task_order_by_priority_desc">Maior para menor</string>
    <string name="fragment_task_order_by_priority_asc">Menor para maior</string>
    <string name="fragment_task_initial_moment_asc">Momento inicial (menor para maior)</string>
    <string name="fragment_task_limit_moment_asc">Momento limite (menor para maior)</string>
    <string name="fragment_task_limit_moment_desc">Momento limite (maior para menor)</string>
    <string name="fragment_task_initial_moment_desc">Momento incial (maior para menor)</string>
    <string name="fragment_task_user_wants_to_create_task">Nova tarefa</string>
    <string name="fragment_task_update_list">Atualizar</string>
    <string name="fragment_task_hide_options">Fechar</string>
    <string name="task_show_options">Ordenação por</string>
    <string name="create_your_task">Nova tarefa</string>
    <string name="teste">Teste</string>
    <string name="fragment_task_submit">Salvar</string>
    <string name="task_delete_option">Deletar</string>
    <string name="task_edit_option">Editar</string>
    <string name="task_confirmation_delete">Deseja realmente apagar essa tarefa ?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="fragment_form_task_placeholder_decription">Descrição da tarefa</string>
    <string name="fragment_form_task_placeholder_initial_date">Data de início</string>
    <string name="fragment_form_task_initial">Início da tarefa</string>
    <string name="fragment_form_task_choose_initial_date">Data</string>
    <string name="fragment_form_task_choose_initial_hour">Hora</string>
    <string name="fragment_form_task_end">Final da tarefa</string>
    <string name="fragment_form_task_choose_final_hour">Hora final</string>
    <string name="today_text">Hoje:</string>
    <string name="fragment_form_task_choose_is_finished">Concluída</string>
    <string name="fragment_form_task_choose_is_not_finished">Para começar</string>
    <string name="fragment_form_task_text_view_is_to_finish_or_not">É para começar ou gravar como concluída ?</string>
    <string name="fragment_form_task_choose_average">Média</string>
    <string name="fragment_form_task_choose_short">Baixa</string>
    <string name="fragment_form_task_choose_high">Alta</string>
    <string name="fragment_form_task_choose_critical">Crítica</string>
    <string name="fragment_form_task_text_view_choose_priority">Prioridade</string>
    <string name="fragment_form_task_text_view_tags">Escolher tags</string>
    <string name="fragment_form_task_button_to_open_tags_diailog">Tags</string>
    <string name="fragment_tag_user_wants_to_create_tag">Criar tag</string>
    <string name="tag_confirmation_delete">Deseja realmente deletar esta tag ?</string>
    <string name="create_your_tag">Nova tag</string>
    <string name="fragment_form_tag_placeholder_name">Nome da tag</string>
    <string name="edit_your_tag">Editar</string>
    <string name="fragment_form_is_finished_question">Concluída ?</string>
    <string name="edit_your_task">Editar tarefa</string>
    <string name="item_task_finish_task">Concluir</string>
    <string name="form_task_add_tag_title">Selecione tags para vincular à tarefa</string>
    <string name="save">Salvar</string>
    <string name="task_confirmation_finish">Deseja realmente concluir essa tarefa ?</string>
    <string name="item_task_not_finish_task">Retornar</string>
    <string name="task_confirmation_undone_finish">Deseja realmente desfazer a conclusão dessa tarefa ?</string>
    <string name="task_next_page">Próxima página</string>
    <string name="task_previous_page">Próxima anterior</string>
    <string name="task_next_page_disabled">Próxima página não existente</string>
    <string name="tag_edit_option">Editar tag</string>
    <string name="tag_delete_option">Deletar tag</string>
    <string name="tasks_of_today_title">Tarefas de hoje</string>
    <string name="tasks_of_day_submit_finished">Salvar alterações</string>
    <string name="tasks_of_day_close_dialog">X</string>
    <string name="fragment_task_order_by_today">Tarefas de hoje</string>
    <string name="fragment_relatories_select_type">Selecionar tipo</string>
    <string name="tasks_of_day_create_task_in_this_day">Criar tarefa</string>
    <string name="tasks_of_day_generate_relatory">Gerar relatório</string>
    <string name="task_description_invalid">Digite alguma coisa para descrever a tarefa</string>
    <string name="task_initial_date_invalid">Verifique se essa data é maior ou igual que a final</string>
    <string name="task_final_date_invalid">Verifique se essa data é maior ou igual que a inicial</string>
    <string name="task_initial_hour_invalid">Verifique se essa hora é maior ou igual que a final, e se as datas não são iguais</string>
    <string name="task_final_hour_invalid">Verifique se essa data é maior ou igual que a inicial, e se as datas não são iguais</string>
    <string name="tag_already_exists">Tag já existe</string>
    <string name="empty_tag_is_not_allowed">Tag não pode ser vazia</string>
    <string name="something_went_wrong">Algumas informações estão inválidas</string>
    <string name="without_tasks_of_today_title">Sem tarefas para esse dia</string>
    <string name="task_description_too_large">Tarefa precisa ser descrita em no máximo 150 caracteres</string>
    <string name="low">Baixa</string>
    <string name="average">Média</string>
    <string name="high">Alta</string>
    <string name="critical">Crítica</string>
    <string name="the_task">A tarefa \"</string>
    <string name="has_started">\" foi iniciada.</string>
    <string name="report_type">\" Mudar Relatório</string>
    <string name="missing_15">Faltam 15 minutos para tarefa \"</string>
    <string name="is_finish">" \" ser finalizada."</string>
    <string name="is_finish2">O prazo definido da tarefa \"</string>
    <string name="is_finish3">\" expirou.</string>
    <string name="fragment_delete_all_notification">Excluir todas as notificacao</string>
    <string name="notifications_deleteall_option">Excluir todas as Notificações</string>
    <string name="tasks_for">Tarefas para</string>
    <string name="priority">Prioridade</string>
    <string name="finishing">Finalização</string>
    <string name="finished_by_priority">Finalizadas por prioridade</string>
    <string name="four_most_used_tags">Tags mais usadas</string>
    <string name="youHave">Você possui</string>
    <string name="completedTasksTxt">tarefas concluídas neste periodo!</string>
    <string name="barChartTitle">Tarefas finalizadas por prioridade:</string>
    <string name="ok">Salvar</string>
    <string name="month_jan">jan.</string>
    <string name="month_feb">fev.</string>
    <string name="month_mar">mar.</string>
    <string name="month_apr">abr.</string>
    <string name="month_may">mai.</string>
    <string name="month_jun">jun.</string>
    <string name="month_jul">jul.</string>
    <string name="month_aug">ago.</string>
    <string name="month_sep">set.</string>
    <string name="month_oct">out.</string>
    <string name="month_nov">nov.</string>
    <string name="month_dec">dez.</string>
    <string name="relatories_by_priority">Por prioridade</string>
    <string name="relatories_no_tasks_in_period">Não há tarefas neste período</string>
    <string name="relatories_by_finishing">Por finalização</string>
    <string name="relatories_finished">Finalizadas</string>
    <string name="relatories_unfinished">Pendente</string>
    <string name="relatories_finished_by_priority">Tarefas finalizadas por prioridade</string>
    <string name="notification_message_one">A tarefa \"</string>
    <string name="notification_message_three">\" foi iniciada.</string>
    <string name="relatories_saved_tasks_in">Período de</string>
    <string name="dialog_notify">Deseja realmente limpar todas as Notificações?</string>
    <string name="saved_tasks_in_period">Tarefas cadastradas neste período:</string>
    <string name="line">-</string>

</resources>