<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item android:id="@+id/home_button"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home"/>
        <item android:id="@+id/tasks_button"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/tasks"/>
        <item android:id="@+id/tags_button"
            android:icon="@drawable/ic_baseline_flag_24"
            android:title="@string/tags_button"/>
        <item android:id="@+id/graph_relatory_button"
            android:icon="@drawable/ic_baseline_description_24"
            android:title="@string/estatisticas"
            />
        <item android:id="@+id/notifications_button"
            android:icon="@drawable/ic_baseline_notifications_none_24"
            android:title="@string/notifications"/>
</menu>