<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        tools:context=".ui.activities.main.fragments.tasks.form_task.FormTaskFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="16dp"
            android:textSize="22dp"
            android:id="@+id/create_or_edit_your_tag_text_view"
            android:text="@string/create_your_tag" />

        <EditText
            android:id="@+id/fragment_form_tag_name"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/fragment_form_tag_placeholder_name"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:visibility="gone"
            android:padding="12dp"
            android:textColor="@color/adagio_red"
            android:id="@+id/fragment_form_tag_already_exists_error_label"
            android:text="@string/tag_already_exists" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:padding="12dp"
            android:visibility="gone"
            android:textColor="@color/adagio_red"
            android:id="@+id/fragment_form_tag_empty"
            android:text="@string/empty_tag_is_not_allowed" />

        <Button
            android:id="@+id/fragment_form_tag_submit"
            android:layout_width="match_parent"
            android:text="@string/fragment_task_submit"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            app:backgroundTint="@null"
            android:background="@drawable/custom_border_green"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
