<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:orientation="vertical"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activities.main.fragments.tasks.form_task.FormTaskFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="12dp"
            android:textSize="22dp"
            android:id="@+id/fragment_form_create_or_edit_your_task_text_view"
            android:text="@string/create_your_task" />

        <EditText

            android:id="@+id/fragment_form_task_description"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:hint="@string/fragment_form_task_placeholder_decription"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:textColor="@color/adagio_red"
            android:id="@+id/fragment_form_task_description_error_label"
            android:text="@string/task_description_invalid" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:paddingLeft="10dp"
            android:visibility="gone"
            android:textColor="@color/adagio_red"
            android:id="@+id/fragment_form_task_description_too_large_error_label"
            android:text="@string/task_description_too_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/fragment_form_task_initial"
                android:textSize="@dimen/labelSimple"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/fragment_form_task_text_view_initial_date"
                        android:layout_width="match_parent"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        />

                    <Button
                        android:id="@+id/fragment_form_task_choose_initial_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@null"
                        android:background="@drawable/custom_border_lighter_blue"
                        android:padding="4dp"
                        android:textSize="@dimen/labelSimple"
                        android:text="@string/fragment_form_task_choose_initial_date"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:visibility="gone"
                        android:textColor="@color/adagio_red"
                        android:id="@+id/fragment_form_task_initial_date_error_label"
                        android:text="@string/task_initial_date_invalid" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/fragment_form_task_text_view_initial_hour"
                        android:layout_width="match_parent"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        />

                    <Button
                        android:id="@+id/fragment_form_task_choose_initial_hour"
                        android:layout_width="wrap_content"
                        app:backgroundTint="@null"
                        android:background="@drawable/custom_border_lighter_blue"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:textSize="@dimen/labelSimple"
                        android:text="@string/fragment_form_task_choose_initial_hour"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"
                        android:visibility="gone"
                        android:textColor="@color/adagio_red"
                        android:id="@+id/fragment_form_task_initial_hour_error_label"
                        android:text="@string/task_initial_hour_invalid" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/adagio_purple"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/fragment_form_task_end"
                android:textSize="@dimen/labelSimple"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_form_text_view_final_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <Button
                        android:id="@+id/fragment_form_task_choose_final_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@null"
                        android:background="@drawable/custom_border_grey"
                        android:padding="4dp"
                        android:textSize="@dimen/labelSimple"
                        android:text="@string/fragment_form_task_choose_initial_date"
                        android:textColor="@color/adagio_purple"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"

                        android:visibility="gone"
                        android:textColor="@color/adagio_red"
                        android:id="@+id/fragment_form_task_final_date_error_label"
                        android:text="@string/task_final_date_invalid" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/fragment_form_task_text_view_final_hour"
                        android:layout_width="match_parent"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        />

                    <Button
                        android:id="@+id/fragment_form_task_choose_final_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:backgroundTint="@null"
                        android:background="@drawable/custom_border_grey"
                        android:padding="4dp"
                        android:textSize="@dimen/labelSimple"
                        android:text="@string/fragment_form_task_choose_initial_hour"
                        android:textColor="@color/adagio_purple"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14dp"

                        android:visibility="gone"
                        android:textColor="@color/adagio_red"
                        android:id="@+id/fragment_form_task_final_hour_error_label"
                        android:text="@string/task_final_hour_invalid" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/fragment_form_task_is_finished_or_not"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_form_is_finished_question"
                android:textSize="@dimen/labelSimple"
                android:theme="@style/SCBSwitch"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_form_task_text_view_choose_priority"
                android:textSize="@dimen/labelSimple" />
            <RadioGroup
                android:id="@+id/fragment_form_task_group_choose_priority"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/fragment_form_task_choose_short"
                    android:text="@string/fragment_form_task_choose_short"
                    android:textSize="@dimen/labelSimple"
                    android:buttonTint="@color/adagio_purple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/fragment_form_task_choose_average"
                    android:text="@string/fragment_form_task_choose_average"
                    android:textSize="@dimen/labelSimple"
                    android:buttonTint="@color/adagio_purple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/fragment_form_task_choose_high"
                    android:text="@string/fragment_form_task_choose_high"
                    android:textSize="@dimen/labelSimple"
                    android:buttonTint="@color/adagio_purple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/fragment_form_task_choose_critical"
                    android:text="@string/fragment_form_task_choose_critical"
                    android:textSize="@dimen/labelSimple"
                    android:buttonTint="@color/adagio_purple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:padding="12dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
        >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_form_task_text_view_tags"
                android:textSize="@dimen/labelSimple"
                android:layout_marginBottom="4dp"/>

            <Button
                android:id="@+id/fragment_form_task_button_to_open_tags_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/custom_border_lighter_blue"
                android:text="@string/fragment_form_task_button_to_open_tags_diailog"
                android:textSize="@dimen/labelSimple"
                />
        </LinearLayout>

        <Button
            android:id="@+id/fragment_form_task_submit"
            android:layout_width="match_parent"
            android:text="@string/fragment_task_submit"
            app:backgroundTint="@null"
            android:background="@drawable/custom_border_green_bottom"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
